Adjustments to turn the app into a PWA using webpack-pwa-manifest and workbox-webpack-plugin.

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#b97eee"/>
+    <meta name="apple-mobile-web-app-title" content="TODO List">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#b97eee">
+    <link rel="apple-touch-icon" href="./icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
+    
     <title>TODO App</title>
 </head>
 <body>
     <div id="app"></div>
+    <noscript>
+        <h3>TODO List app requires Javascript</h3>
+    </noscript>
+    <script>
+        if ('serviceWorker' in navigator) {
+          window.addEventListener('load', function () {
+            navigator.serviceWorker.register('/todo-app/service-worker.js')
+              .then(registration => {
+                console.log('SW registrado')
+              })
+              .catch(registrationError => {
+                console.log('SW error', registrationError)
+              })
+          })
+        }
+      </script>
 </body>
 </html>
